--- a/requirements.txt
+++ b/requirements.txt
@@ -188,3 +188,9 @@ urllib3==2.5.0
     # via requests
 yarl==1.20.1
     # via aiohttp
+# Pathway integration
+pathway-python>=0.1.0
+websocket-client>=1.0.0
+
+# Additional utilities
+python-dotenv>=1.0.0
